--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,8 +1,8 @@
 <h1>論文一覧</h1>
 
-
-<% @articles.each do |article| %>
-  <p><%= link_to article.title, article %></p>
-<% end %>
-
+<ul>
+  <% @articles.each do |article| %>
+    <li><p><%= link_to article.title, article %></p></li>
+  <% end %>
+</ul>
 <%= link_to "投稿する", new_article_path %>
