--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,6 +8,10 @@
   <b><%= @article.body %></b>
 </p>
 
+<p>
+  <%= link_to "編集", edit_article_path(@article) %>
+  <%= link_to "削除", article_path(@article), method: :delete, data: {confirm: '削除してよろしいですか？'} %>
+</p>
 
 <p>
   <%= link_to "一覧へ戻る", articles_path(@article)%>
